# parsel

./: exemplo_00.py  full_site.html  pyproject.toml
