[tool.poetry]
name = "parsel_lib"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
parsel = "^1.8.1"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "blue . && isort ."
docs = "mkdocs serve"
test = "pytest test -vv && coverage report -m"
post_test = "coverage html"